# openrpc-rs

./: Cargo.toml  README.md  README.org
openrpc-derive/: Cargo.toml
openrpc-derive/examples/: test.rs
openrpc-derive/src/: attr.rs  lib.rs  params.rs  rpc_trait.rs  to_gen_schema.rs
openrpc-schema/: Cargo.toml  README.md
openrpc-schema/src/: document.rs  lib.rs
src/: lib.rs  openrpc_document.rs
