[package]
name = "openrpc-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "fold"] }
proc-macro2 = "1.0"
quote = "1.0.6"
proc-macro-crate = "0.1.4"
openrpc-schema = {path = "../openrpc-schema"}
jsonrpc-derive = {git = "https://github.com/starcoinorg/jsonrpc",rev = "296f11ffe2cc1c0d5a7f3844d3322f61dda1c1b2"}
jsonrpc-core-client = {git = "https://github.com/starcoinorg/jsonrpc",rev = "296f11ffe2cc1c0d5a7f3844d3322f61dda1c1b2"}
[dev-dependencies]
jsonrpc-core = { version = "17.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[features]
jsonrpc=[]