[package]
name = "openrpc-schema"
version = "0.1.0"
authors = ["fikgol <hit.cs.lijun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = {git = "https://github.com/starcoinorg/schemars", rev="9b3705780b8fe9c8676ff82919869ba7405b1062"}
serde_json = "1.0"
serde = "1.0"
