[package]
name = "openrpc-schema"
version = "0.1.0"
authors = ["fikgol <hit.cs.lijun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = {git = "https://github.com/starcoinorg/schemars", rev="c9f668d923efd3df717958c20744136961df7969"}
serde_json = "1.0"
serde = "1.0"
